cambios en la app

--- a/src/pages/bluetooth/bluetooth.html
+++ b/src/pages/bluetooth/bluetooth.html
@@ -39,7 +39,8 @@
     <ion-list-header>
       Respuestas
     </ion-list-header>
-    <ion-item>{{item.Respuesta}}</ion-item>
+    <ion-item>{{item.Modo}}, {{item.Nombre}}</ion-item>
+    <ion-item>{{item.Descripcion}}, Valor: {{item.Valor}}, Unidad: {{item.Unidad}}</ion-item>
     <ion-item>{{item.Fecha}}</ion-item>
   </ion-list>
 
