--- a/src/pages/skin-digital-uno/skin-digital-uno.html
+++ b/src/pages/skin-digital-uno/skin-digital-uno.html
@@ -3,22 +3,44 @@
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
--->
+
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar hide-nav-bar="true">
     <ion-title>Digital Uno  <ion-icon name="bluetooth" item-end style="float: right;"></ion-icon></ion-title>
   </ion-navbar>
 
 </ion-header>
-
+-->
 <!-- este es el modo landscape -->
 <ion-content class="hidden calendario-horizontal">
       <ion-grid>
         <ion-row>
           <ion-col>
             <ion-row>
+                <ion-col no-padding col-6>
+                  <ion-card class="card-indicadores" style="margin-top: 0;">
+                    <ion-card-header text-center>
+                      Tº Motor
+                    </ion-card-header>
+                    <ion-card-content style="font-size: 3rem;" text-center>
+                      {{temperaturaActual}} <span style="font-size: 1rem;">ºC</span> 
+                    </ion-card-content>
+                  </ion-card>
+                </ion-col>
+                <ion-col no-padding col-6>
+                    <ion-card class="card-indicadores" style="margin-top: 0;">
+                      <ion-card-header text-center>
+                        Flujo Aire
+                      </ion-card-header>
+                      <ion-card-content style="font-size: 3rem;" text-center>
+                        {{temperaturaActual}} <span style="font-size: 1rem;">g/s</span>
+                      </ion-card-content>
+                    </ion-card>
+                  </ion-col>
+              <!--
               <ion-col>
+
                   <linear-gauge
                   width="150"
                   height="100"
@@ -49,11 +71,19 @@
                   [attr.value]="temperaturaActual"
                 ></linear-gauge>
               </ion-col>
+            -->
             </ion-row>
-            <ion-row>
-                <ion-col>
-                  row 2 col 1
-                </ion-col>
+            <ion-row no-padding>
+                <ion-col no-padding col-12>
+                    <ion-card class="card-indicadores" style="margin-top: 0;">
+                      <ion-card-header text-center>
+                        RPM
+                      </ion-card-header>
+                      <ion-card-content style="font-size: 3.5rem;" text-center>
+                        {{rpmActual}}
+                      </ion-card-content>
+                    </ion-card>
+                  </ion-col>
               </ion-row>
           </ion-col>
           <ion-col col-6 style="text-align: center;">
@@ -98,7 +128,7 @@
     <ion-grid>
       <ion-row>
         <ion-col col-12>
-          1 of 3
+          <span style="font-family: 'Digital7'">123452</span>
         </ion-col>
         <ion-col col-12>
           2 of 3
@@ -109,3 +139,14 @@
       </ion-row>
     </ion-grid>
 </ion-content>
+<ion-footer>
+    <ion-toolbar>
+        <button ion-button round outline icon-only color="light">
+            <ion-icon name="star"></ion-icon>
+          </button>
+          <button ion-button round outline icon-only color="secondary" style="float: right;">
+              <ion-icon name="bluetooth"></ion-icon>
+            </button>
+        
+    </ion-toolbar>
+  </ion-footer>
