--- a/src/pages/skin-digital-uno/skin-digital-uno.html
+++ b/src/pages/skin-digital-uno/skin-digital-uno.html
@@ -154,8 +154,8 @@
 </ion-content>
 <ion-footer>
     <ion-toolbar>
-        <button ion-button round outline icon-only color="light">
-            <ion-icon name="star"></ion-icon>
+        <button ion-button round outline icon-only color="secondary" (click)="goBack()">
+            <ion-icon name="arrow-round-back"></ion-icon>
           </button>
           <button ion-button round outline icon-only color="{{colorBlue}}" style="float: right;">
               <ion-icon name="bluetooth"></ion-icon>
