--- a/src/pages/seleccion-skin/seleccion-skin.html
+++ b/src/pages/seleccion-skin/seleccion-skin.html
@@ -43,7 +43,7 @@
             </ion-thumbnail>
             <h2>Formato Digital 2</h2>
             <p text-wrap>Elegante</p>
-            <button ion-button clear item-end>Ver</button>
+            <button ion-button clear item-end  (click)="AbrirSkinDigitalDos()">Ver</button>
           </ion-item>
         </ion-list>
         <ion-list col-12 col-sm-6>
