--- a/src/pages/skin-digital-dos/skin-digital-dos.html
+++ b/src/pages/skin-digital-dos/skin-digital-dos.html
@@ -5,14 +5,14 @@
   Ionic pages and navigation.
 -->
 <ion-content class="hidden calendario-horizontal dark">
-  <ion-grid>
+  <ion-grid style="padding-top: 4%;">
     <ion-row>
       <!-- columna de la izquierda-->
       <ion-col>
         <!-- fila 1 de la columna izquierda -->
         <ion-row>
           <ion-col no-padding col-6>
-            <ion-card class="card-indicadores" style="margin-top: 0;">
+            <ion-card class="card-indicadores" style="margin-top: 0;border: none;box-shadow: none;">
               <ion-card-header text-center>
                 Throttle Pos
               </ion-card-header>
@@ -23,7 +23,7 @@
             </ion-card>
           </ion-col>
           <ion-col no-padding col-6>
-            <ion-card class="card-indicadores" style="margin-top: 0;">
+            <ion-card class="card-indicadores" style="margin-top: 0;border: none;box-shadow: none;">
               <ion-card-header text-center>
                 Flujo Aire
               </ion-card-header>
@@ -37,7 +37,7 @@
         <!-- fila 2 de la columna izquierda-->
         <ion-row no-padding>
           <ion-col no-padding col-12>
-            <ion-card class="card-indicadores" style="margin-top: 0;">
+            <ion-card class="card-indicadores" style="margin-top: 0;border: none;box-shadow: none;">
               <ion-card-header text-center>
                 RPM
               </ion-card-header>
@@ -50,7 +50,7 @@
         <!-- fila 3 de la columna izquierda -->
         <ion-row no-padding>
           <ion-col no-padding col-12>
-            <ion-card class="card-indicadores" style="margin-top: 0;">
+            <ion-card class="card-indicadores" style="margin-top: 0;border: none;box-shadow: none;">
               <ion-card-header text-center>
                 T° Motor
               </ion-card-header>
@@ -69,7 +69,7 @@
             <ion-col no-padding col-12>
                 <span class="header-vel" style="font-size: 2rem;">Velocidad Actual Km/Hr</span>
             </ion-col>
-            <ion-col no-padding col-12 style="font-size: 15rem;font-family: 'Digital7';" text-center class="{{estiloAlertaVelocidad}}">
+            <ion-col no-padding col-12 style="font-size: 18rem;font-family: 'Digital7';" text-center class="{{estiloAlertaVelocidad}}">
                 {{velocidadActual}}
             </ion-col>
 
@@ -125,22 +125,20 @@
             <ion-col no-padding col-6>
               <ion-card class="card-indicadores" style="margin-top: 0;border: none;box-shadow: none;">
                 <ion-card-header text-center>
-                  Throttle Pos
+                  Latitud
                 </ion-card-header>
                 <ion-card-content style="font-size: 3rem;" text-center>
-                  <span>{{throttleposActual}}</span>
-                  <sub style="font-size: 1.3rem;">%</sub>
+                  <span>{{latitud}}</span>
                 </ion-card-content>
               </ion-card>
             </ion-col>
             <ion-col no-padding col-6>
-              <ion-card class="card-indicadores" style="margin-top: 0;">
+              <ion-card class="card-indicadores" style="margin-top: 0;border: none;box-shadow: none;">
                 <ion-card-header text-center>
-                  Flujo Aire
+                  Longitud
                 </ion-card-header>
                 <ion-card-content style="font-size: 3rem;" text-center>
-                  <span>{{flujoAireActual}}</span>
-                  <sub style="font-size: 1.3rem;">g/s</sub>
+                  <span>{{longitud}}</span>
                 </ion-card-content>
               </ion-card>
             </ion-col>
@@ -148,7 +146,7 @@
           <!-- fila 2 de la columna izquierda-->
           <ion-row no-padding>
             <ion-col no-padding col-12>
-              <ion-card class="card-indicadores" style="margin-top: 0;">
+              <ion-card class="card-indicadores" style="margin-top: 0;border: none;box-shadow: none;">
                 <ion-card-header text-center>
                   RPM
                 </ion-card-header>
@@ -161,7 +159,7 @@
           <!-- fila 3 de la columna izquierda -->
           <ion-row no-padding>
             <ion-col no-padding col-12>
-              <ion-card class="card-indicadores" style="margin-top: 0;">
+              <ion-card class="card-indicadores" style="margin-top: 0;border: none;box-shadow: none;">
                 <ion-card-header text-center>
                   T° Motor
                 </ion-card-header>
