--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css" />
 
 </head>
 <body>
